[gd_scene load_steps=16 format=2]

[ext_resource path="res://Location/DownWorld/assets5/health_bar_red.png" type="Texture" id=1]
[ext_resource path="res://Location/DownWorld/assets5/player.png" type="Texture" id=2]
[ext_resource path="res://Location/DownWorld/assets5/mobs/fire-skull.png" type="Texture" id=3]
[ext_resource path="res://Location/DownWorld/scriptes5/Boss2.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=10]
radius = 84.0536

[sub_resource type="CircleShape2D" id=11]
radius = 76.5914

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 96, 112 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 96, 112 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="Boss2" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.709804, 0.231373, 0.380392, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.709804, 0.231373, 0.380392, 1 )
position = Vector2( 8, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3, -3.5 )
shape = SubResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
frame = 4
playing = true
flip_h = true

[node name="SpellTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="SpellTimer" to="." method="_on_SpellTimer_timeout"]
